# mob-solutions-test

./: README.md
GadgetEditor/: CMakeLists.txt  README.md
GadgetEditor/editors/: framegrided.cpp  framegrided.h  gadgeteditor.cpp  gadgeteditor.h  gadgeteditorboolean.cpp  gadgeteditorboolean.h  gadgeteditordouble.cpp  gadgeteditordouble.h  gadgeteditorenumerator.cpp  gadgeteditorenumerator.h  gadgeteditorinteger.cpp  gadgeteditorinteger.h  gadgeteditorstruct.cpp  gadgeteditorstruct.h
GadgetEditor/src/: gadgeteditorfactory.cpp  gadgeteditorfactory.h  gridwidget.cpp  gridwidget.h  jsongenerator.cpp  jsongenerator.h  main.cpp  scrollarea.cpp  scrollarea.h
GadgetTableView/: CMakeLists.txt  CustomModel.qml  CustomTableView.qml  README.md  custommodel.cpp  custommodel.h  main.cpp  main.qml  qml.qrc
common/gadgets/: gadgethelper.cpp  gadgethelper.h  p2d.cpp  p2d.h  player.cpp  player.h
